--- a/backend/composer.json
+++ b/backend/composer.json
@@ -35,9 +35,11 @@
     "symfony/runtime": "^6.3",
     "symfony/security-bundle": "^6.3",
     "symfony/serializer": "^6.3",
+    "symfony/stimulus-bundle": "^2.19",
     "symfony/string": "^6.3",
     "symfony/translation": "^6.3",
     "symfony/twig-bundle": "^6.3",
+    "symfony/ux-turbo": "^2.19",
     "symfony/validator": "^6.3",
     "symfony/web-link": "^6.3",
     "symfony/yaml": "^6.3",
@@ -50,7 +52,7 @@
     "symfony/browser-kit": "^6.3",
     "symfony/css-selector": "^6.3",
     "symfony/debug-bundle": "^6.3",
-    "symfony/maker-bundle": "^1.0",
+    "symfony/maker-bundle": "^1.61",
     "symfony/phpunit-bridge": "^7.1",
     "symfony/stopwatch": "^6.3",
     "symfony/web-profiler-bundle": "^6.3"
